Tests/CompilerTests/negative/invalid-ascription.expected
negative/invalid-ascription.hylo:5.10-11: error: expression does not denote a type
  var b: a
         ^
